tests/v0-fail/invalid_header.cli
# This is not a valid crok header
$ echo hello
